[package]
name = "omics_valid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
csv="1.1"
validator = { version = "0.12", features = ["derive"] }
regex = "1.5"
lazy_static = "1.4.0"
argh = "0.1"
strum = { version = "0.22", features = ["derive"] }