[package]
name = "omics_valid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
csv="1.1"
validator = { version = "0.14", features = ["derive"] }
regex = "1.5"
argh = "0.1"
strum = { version = "0.22", features = ["derive"] }
rust_sbml = {version = "0.7.0", default_features = false}
once_cell = "1.4.0"
itertools = "0.10"
